--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,7 @@
    --light-gray: rgb(122, 122, 122, 0.3);
    --border-color: #dfdbdb;
    --body-bg: #f5f5f5;
+   --red: #ff7a7a;
 
    /* Font */
    --font-fam-commissioner: "Commissioner", sans-serif;
@@ -745,6 +746,7 @@ footer a {
 }
 
 .select_reward_btn,
+.continue_btn,
 .got_it_btn {
    padding: 1.5rem 3.5rem;
    border: none;
