--- a/styles/success-modal.css
+++ b/styles/success-modal.css
@@ -1,5 +1,5 @@
 /* ================= all about success modal ================= */
-
+/* overlay backgroung */
 .success_modal_main_container {
    display: none;
    align-items: center;
@@ -61,8 +61,7 @@
    gap: 4rem;
    width: 60rem;
    height: 45rem;
-   padding: 0 3rem;
-   /* border: 0.1rem solid red; */
+   padding: 0 3rem 1.5rem 3rem;
 }
 
 .check_container {
